[Fixes #15976] Fix pagination link cut off border on hover

--- a/less/pagination.less
+++ b/less/pagination.less
@@ -43,6 +43,7 @@
       color: @pagination-hover-color;
       background-color: @pagination-hover-bg;
       border-color: @pagination-hover-border;
+      z-index: 3;
     }
   }
 
